# Joxy

./: .gitmodules  CMakeLists.txt  readme.md
include/joxy/: include.hpp  utils.hpp  window.hpp
include/joxy/renderer/: ebo.hpp  program.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
include/joxy/ui/: ui.hpp
shaders/: default.frag  default.vert
src/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt  ebo.cpp  program.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
src/ui/: CmakeLists.txt  ui.cpp
